--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-handlebars": "^5.2.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16"
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18"
   },
   "devDependencies": {
     "chai": "^4.3.0",
